--- a/baremetalesxi/baremetalesxi.yml
+++ b/baremetalesxi/baremetalesxi.yml
@@ -44,16 +44,16 @@
             -update "{{ playbook_dir }}/files/boot.cfg" /EFI/BOOT/BOOT.CFG
             -update "{{ playbook_dir }}/tmp/{{ inventory_hostname }}/ks.cfg" /KS.CFG
 
-        # - name: Boot to Network ISO
-        #   dellemc.openmanage.idrac_os_deployment:
-        #     validate_certs: false
-        #     idrac_ip: "{{ idrac_ip }}"
-        #     idrac_user: "{{ idrac_username }}"
-        #     idrac_password: "{{ idrac_password }}"
-        #     share_name: "192.168.170.254:/volume3/Infra-Test/ansible"
-        #     iso_image: "{{ inventory_hostname.split('.')[0] }}.iso"
-        #     expose_duration: 10
-        #   delegate_to: localhost
+        - name: Boot to Network ISO 
+          dellemc.openmanage.idrac_os_deployment:
+            validate_certs: false
+            idrac_ip: "{{ idrac_ip }}"
+            idrac_user: "{{ idrac_username }}"
+            idrac_password: "{{ idrac_password }}"
+            share_name: "192.168.170.254:/volume3/Infra-Test/ansible"
+            iso_image: "{{ inventory_hostname.split('.')[0] }}.iso"
+            expose_duration: 10
+          delegate_to: localhost
 
         - name: Delete temp directory for kickstart file
           file:
