--- a/baremetalesxi/baremetalesxi.yml
+++ b/baremetalesxi/baremetalesxi.yml
@@ -5,14 +5,18 @@
   gather_facts: no
 
   pre_tasks:
-    - name: Gathering System Inventory Info
-      redfish_info:
-        category: Systems
-        command: GetSystemInventory
-        baseuri: "{{ idrac_ip }}"
-        username: "{{ idrac_username }}"
-        password: "{{ idrac_password }}"
-      register: redfish_info
+    - name: Check ICMP ping to the target IP
+      command: ping -c 1 "{{ mgmt_ip }}"
+      register: ping_result
+      ignore_errors: yes  # Continue even if the command fails  
+  #   - name: Gathering System Inventory Info
+  #     redfish_info:
+  #       category: Systems
+  #       command: GetSystemInventory
+  #       baseuri: "{{ idrac_ip }}"
+  #       username: "{{ idrac_username }}"
+  #       password: "{{ idrac_password }}"
+  #     register: redfish_info
 
   tasks:
     - name: Install ESXi
@@ -29,8 +33,8 @@
             content: |
               vmaccepteula
               rootpw VMware123!
-              clearpart --firstdisk="DELL BOSS-N1" --overwritevmfs
-              install --firstdisk="DELL BOSS-N1" --overwritevmfs
+              clearpart --firstdisk="local" --overwritevmfs
+              install --firstdisk="local" --overwritevmfs
               network --device=vmnic0 --bootproto=static --vlanid={{ networks['mgmt']['vlan'] }} --ip={{ mgmt_ip }} --netmask={{ networks['mgmt']['network']['subnet_mask'] }} --gateway={{ networks['mgmt']['network']['default_gateway'] }} --nameserver="{{ dns_servers[0] }},{{ dns_servers[1] }}" --hostname="{{ inventory_hostname }}"
               reboot
 
@@ -44,16 +48,56 @@
             -update "{{ playbook_dir }}/files/boot.cfg" /EFI/BOOT/BOOT.CFG
             -update "{{ playbook_dir }}/tmp/{{ inventory_hostname }}/ks.cfg" /KS.CFG
 
+### OPTION 1: Install by module idrac_os_deployment, module use Lifecycle Controler insall OS from ISO on NFS
+## Luu ý: option này sẽ tự động restart và boot vào file ISO được chỉ định nên cẩn thận nhầm IDRAC
         - name: Boot to Network ISO 
           dellemc.openmanage.idrac_os_deployment:
             validate_certs: false
             idrac_ip: "{{ idrac_ip }}"
             idrac_user: "{{ idrac_username }}"
             idrac_password: "{{ idrac_password }}"
-            share_name: "192.168.170.254:/volume3/Infra-Test/baremetalesxi"
+            share_name: "192.168.170.254:/volume3/Infra-Test/ansible"
             iso_image: "{{ inventory_hostname.split('.')[0] }}.iso"
             expose_duration: 10
           delegate_to: localhost
+
+        - name: Wait 10m install
+          pause:
+            minutes: 15          
+
+## OPTION 2: Cài đặt qua việc mount File ISO vào Remote File Share trên IDRAC và set fisrt boot vào file ISO đó
+
+        # - name: Insert image file to Remote File Share 1 using NFS share.
+        #   dellemc.openmanage.idrac_virtual_media:
+        #     validate_certs: false
+        #     idrac_ip: "{{ idrac_ip }}"
+        #     idrac_user: "{{ idrac_username }}"
+        #     idrac_password: "{{ idrac_password }}"
+        #     virtual_media:
+        #       - index: 1
+        #         insert: true
+        #         image: "192.168.170.254:/volume3/Infra-Test/ansible/{{ inventory_hostname.split('.')[0] }}.iso"
+
+
+        # - name: set iDRAC attribute for one-time boot from virtual CD
+        #   dellemc.openmanage.idrac_boot:
+        #     validate_certs: false
+        #     idrac_ip: "{{ idrac_ip }}"
+        #     idrac_user: "{{ idrac_username }}"
+        #     idrac_password: "{{ idrac_password }}"
+        #     boot_source_override_enabled: "once"
+        #     boot_source_override_target: "cd"
+        #     reset_type: "force_restart"
+
+        # - name: Unmount ESXi ISO from NFS via iDRAC Virtual Media
+        #   dellemc.openmanage.idrac_virtual_media:
+        #     validate_certs: false
+        #     idrac_ip: "{{ idrac_ip }}"
+        #     idrac_user: "{{ idrac_username }}"
+        #     idrac_password: "{{ idrac_password }}"
+        #     virtual_media:
+        #     - index: 1
+        #       insert: false
 
         - name: Delete temp directory for kickstart file
           file:
@@ -64,3 +108,4 @@
           file:
             path: "{{ playbook_dir }}/{{ inventory_hostname.split('.')[0] }}.iso"
             state: absent
+      when: ping_result.rc != 0 
